--- a/calendrier.html
+++ b/calendrier.html
@@ -5328,7 +5328,7 @@
 
                       // Définir la valeur de contenteditable en fonction du statut de l'utilisateur
                       const editableAttr = isConfigUser ? 'true' : 'false';
-                      const observationsEditableAttr = 'true';
+                      const observationsEditableAttr = isConfigUser ? 'true' : 'false';
 
                       console.log("🛠 event.Travail brut :", event.Travail, typeof event.Travail);
                       const Travail = event.Travail || '';
@@ -5389,7 +5389,10 @@
                         <td data-column="Observations">
                             <textarea class="observation-text auto-expand-textarea"
                                       data-field="observations"
-                                      rows="2">${event.Observations || ''}</textarea>
+                                      rows="2"
+                                      ${isConfigUser ? '' : 'readonly style="background-color: #f5f5f5; color: #666;"'}>
+                                ${event.Observations || ''}
+                            </textarea>
 
                             <!-- Case à cocher pour photos obligatoires (seulement pour configuser) -->
                             ${isConfigUser ? `
