--- a/calendrier.html
+++ b/calendrier.html
@@ -5389,10 +5389,7 @@
                         <td data-column="Observations">
                             <textarea class="observation-text auto-expand-textarea"
                                       data-field="observations"
-                                      rows="2"
-                                      ${isConfigUser ? '' : 'readonly style="background-color: #f5f5f5; color: #666;"'}>
-                                ${event.Observations || ''}
-                            </textarea>
+                                      rows="2">${event.Observations || ''}</textarea>
 
                             <!-- Case à cocher pour photos obligatoires (seulement pour configuser) -->
                             ${isConfigUser ? `
