--- a/calendrier.html
+++ b/calendrier.html
@@ -5387,9 +5387,12 @@
                             `}
                         </td>
                         <td data-column="Observations">
-                            <textarea class="observation-text auto-expand-textarea"
+                           <textarea class="observation-text auto-expand-textarea"
                                       data-field="observations"
-                                      rows="2">${event.Observations || ''}</textarea>
+                                      rows="2"
+                                      ${isConfigUser ? '' : 'readonly style="background-color: #f5f5f5; color: #666;"'}>
+                                ${event.Observations || ''}
+                            </textarea>
 
                             <!-- Case à cocher pour photos obligatoires (seulement pour configuser) -->
                             ${isConfigUser ? `
