--- a/calendrier.html
+++ b/calendrier.html
@@ -1770,7 +1770,7 @@
         async function applyChangesWithoutPrompt(row, isSeries) {
             const userId = row.dataset.userId;
 
-            // 1️⃣ Récupérer l'événement complet depuis Supabase
+            // 1️⃣ Récupérer l'événement complet depuis Supabase (ORIGINAL)
             const { data: rendezvousActuel, error } = await supabase
                 .from('event_quot1_fran')
                 .select('*')
@@ -1782,12 +1782,11 @@
             }
             const recurrenceId = rendezvousActuel.recurrence_id;
 
-            // 2️⃣ Construire modificationsFromRow en filtrant SEULEMENT les champs qui ont vraiment changé
+            // 2️⃣ Construire modificationsFromRow
             const modificationsFromRow = {};
             Array.from(row.cells).forEach(cell => {
                 const column = cell.dataset.column;
 
-                // 🚨 IGNORER COMPLÈTEMENT LA COLONNE 'Travail'
                 if (column && column !== "Travail") {
                     let cellValue;
 
@@ -1800,18 +1799,33 @@
 
                     const nouvelleValeur = cellValue === "" ? null : cellValue;
 
-                    const ancienneValeur = rendezvousActuel[column] === "" ? null : rendezvousActuel[column];
+                    // 🔴 CORRECTION : Récupérer la valeur ORIGINALE depuis la BDD
+                    const ancienneValeurBDD = rendezvousActuel[column];
+                    const ancienneValeur = ancienneValeurBDD === "" || ancienneValeurBDD === null ? null : ancienneValeurBDD;
 
-                    // On inclut uniquement si la valeur de l'UI est différente de la valeur initiale en base
-                    if (String(nouvelleValeur) !== String(ancienneValeur)) {
+                    // 🔴 CORRECTION : Comparaison correcte
+                    const hasChanged = (
+                        (nouvelleValeur === null && ancienneValeur !== null) ||
+                        (nouvelleValeur !== null && ancienneValeur === null) ||
+                        (nouvelleValeur !== null && ancienneValeur !== null && nouvelleValeur !== ancienneValeur)
+                    );
+
+                    if (hasChanged) {
                         modificationsFromRow[column] = nouvelleValeur;
+                        console.log(`✅ Changement détecté pour ${column}:`, {
+                            ancienne: ancienneValeur,
+                            nouvelle: nouvelleValeur
+                        });
                     }
                 }
             });
 
-
-            // 3️⃣ Envoyer SEULEMENT les champs qui doivent être mis à jour.
-            await updateEventData(row, rendezvousActuel, isSeries, recurrenceId, modificationsFromRow);
+            // 3️⃣ Envoyer SEULEMENT si il y a des changements
+            if (Object.keys(modificationsFromRow).length > 0) {
+                await updateEventData(row, rendezvousActuel, isSeries, recurrenceId, modificationsFromRow);
+            } else {
+                console.log("ℹ️ Aucun changement détecté, pas de mise à jour");
+            }
         }
 
 
