--- a/calendrier.html
+++ b/calendrier.html
@@ -1772,7 +1772,6 @@
         async function applyChangesWithoutPrompt(row, isSeries) {
             const userId = row.dataset.userId;
 
-            // 1️⃣ Récupérer l'événement complet depuis Supabase
             const { data: rendezvousActuel, error } = await supabase
                 .from('event_quot1_fran')
                 .select('*')
@@ -1784,41 +1783,32 @@
             }
             const recurrenceId = rendezvousActuel.recurrence_id;
 
-            // 2️⃣ Construire modificationsFromRow en filtrant SEULEMENT les champs qui ont vraiment changé
             const modificationsFromRow = {};
             Array.from(row.cells).forEach(cell => {
                 const column = cell.dataset.column;
 
-                // 🚨 IGNORER COMPLÈTEMENT LA COLONNE 'Travail'
                 if (column && column !== "Travail") {
                     let cellValue;
 
                     if (column === "Observations") {
                         const textarea = row.querySelector('[data-field="observations"]');
                         cellValue = textarea ? textarea.value.trim() : "";
+                        // FORCER l'inclusion de Observations si modifié
+                        modificationsFromRow[column] = cellValue === "" ? null : cellValue;
                     } else {
                         cellValue = cell.textContent.trim();
-                    }
+                        const nouvelleValeur = cellValue === "" ? null : cellValue;
+                        const ancienneValeur = rendezvousActuel[column] === "" ? null : rendezvousActuel[column];
 
-                    const nouvelleValeur = cellValue === "" ? null : cellValue;
-                    const ancienneValeur = rendezvousActuel[column] === "" ? null : rendezvousActuel[column];
-
-                    // On inclut uniquement si la valeur de l'UI est différente de la valeur initiale en base
-                    if (String(nouvelleValeur) !== String(ancienneValeur)) {
-                        modificationsFromRow[column] = nouvelleValeur;
+                        if (String(nouvelleValeur) !== String(ancienneValeur)) {
+                            modificationsFromRow[column] = nouvelleValeur;
+                        }
                     }
                 }
             });
 
-            // 🔴 DEBUG : Vérifiez ce qui est dans modificationsFromRow
-            console.log("🛠️ modificationsFromRow à envoyer:", modificationsFromRow);
-            console.log("🛠️ Nombre de champs modifiés:", Object.keys(modificationsFromRow).length);
-
-            // 3️⃣ Envoyer SEULEMENT les champs qui doivent être mis à jour.
             if (Object.keys(modificationsFromRow).length > 0) {
                 await updateEventData(row, rendezvousActuel, isSeries, recurrenceId, modificationsFromRow);
-            } else {
-                console.log("ℹ️ Aucun changement détecté, pas de mise à jour");
             }
         }
 
