--- a/calendrier.html
+++ b/calendrier.html
@@ -6282,6 +6282,8 @@
                                   const normalizedNew = (cellValue === "EMPTY" ? null : cellValue);
 
                                   if (normalizedOld !== normalizedNew) {
+                                    updatedEvent[column] = normalizedNew;
+
                                     modifications.push({
                                       user_id: userId,
                                       modifié_par: modifiePar,
