--- a/calendrier.html
+++ b/calendrier.html
@@ -6281,7 +6281,8 @@
                                   const normalizedOld = (ancienneValeur === "EMPTY" ? null : ancienneValeur);
                                   const normalizedNew = (cellValue === "EMPTY" ? null : cellValue);
 
-                                  if (normalizedOld !== normalizedNew) {
+                                  if (String(normalizedOld) !== String(normalizedNew))
+
                                     updatedEvent[column] = normalizedNew;
 
                                     modifications.push({
