--- a/calendrier.html
+++ b/calendrier.html
@@ -6687,6 +6687,7 @@
           // ⚡ Ne jamais toucher à ces colonnes
           delete champsModifies["user_id"];
           delete champsModifies["recurrence_id"];
+          delete champsModifies["Travail"];
           delete champsModifies["Pointage"];
 
 
